# DefenseExtraction

./: .gitignore  AI Agent Defense Extractor.ipynb  LICENSE  README.md  SystemInformation.ipynb  app.p  app.py  app_working.py  config.py  main.py  main_workflow.py  pyproject.toml  requirements.txt  source_file.xlsx  text.ipynb
data/: Documentation and Workflows.docx  Excel Headers 1.docx  Header Reference Document.xlsx  Sample_Defence_Contract_SGA_New-Process.xlsx  source_file - Copy.xlsx  source_file.xlsx  taxonomy.py  ~$Sample_Defence_Contract_SGA_New-Process.xlsx
db_storage/: chroma.sqlite3
model/: config.json
src/: Market Segment.xlsx  processors.py  prompts.py  validators.py  vector_engine.py
testing/: SystemInformation.ipynb  taxonomy.json
